--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
-      th:replace="~{fragments/layout :: layout(~{::title}, ~{::body})}">
-<head>
-    <title>トップページ | 課題管理アプリケーション</title>
-</head>
-<body>
-<h1 class="mt-3">課題管理アプリケーション</h1>
-<ul>
-    <li>
-        <a href="./issues/list.html" th:href="@{/issues}">課題一覧</a>
-    </li>
-    <li sec:authorize="hasAuthority('ADMIN')">
-        <a href="./users/list.html" th:href="@{/users}">ユーザ一覧</a>
-    </li>
-    <li>
-        <a href="./logout.html" th:href="@{/logout}">ログアウト</a>
-    </li>
-</ul>
-</body>
+<html
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
+  th:fragment="layout(title, content)"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      th:href="@{/css/style.css}"
+      href="../static/css/style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+
+    <title>メニュー画面</title>
+  </head>
+  <body>
+    <div class="menu-container">
+      <h1>Spring学習プロジェクト</h1>
+      <ul>
+        <li>
+          <a href="./issues/list.html" th:href="@{/issues}">課題一覧</a>
+        </li>
+        <li sec:authorize="hasAuthority('ADMIN')">
+          <a href="./users/list.html" th:href="@{/users}">ユーザ一覧</a>
+        </li>
+        <li>
+          <a href="./logout.html" th:href="@{/logout}">ログアウト</a>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
