--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{fragments/layout :: layout(~{::title}, ~{::body})}">
-<head>
-    <title>ログイン | 課題管理アプリケーション</title>
-</head>
-<body>
-<h1 class="mt-3">課題管理アプリケーション</h1>
-<div th:if="${param.error}">
-    <p>
-        ユーザ名もしくはパスワードが違います。
-    </p>
-</div>
-<form action="#" th:action="@{/login}" method="post">
-    <div class="mt-3">
-        <label for="usernameInput" class="form-label">ユーザー名</label>
-        <input type="text" id="usernameInput" name="username" class="form-control">
+<html
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
+  th:fragment="layout(title, content)"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      th:href="@{/css/style.css}"
+      href="../static/css/style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+
+    <title>ログイン画面</title>
+  </head>
+  <body>
+    <div class="login-container">
+      <h1>Spring学習プロジェクト</h1>
+      <div th:if="${param.error}">
+        <p>ユーザ名もしくはパスワードが違います。</p>
+      </div>
+      <form action="#" th:action="@{/login}" method="post">
+        <label for="usernameInput">ユーザー名</label>
+        <input type="text" id="usernameInput" name="username" />
+
+        <label for="passwordInput">パスワード</label>
+        <input type="password" id="passwordInput" name="password" />
+        <button type="submit">ログイン</button>
+      </form>
     </div>
-    <div class="mt-3">
-        <label for="passwordInput" class="form-label">パスワード</label>
-        <input type="password" id="passwordInput" name="password" class="form-control">
-    </div>
-    <div class="mt-3">
-        <button type="submit" class="btn btn-primary">ログイン</button>
-    </div>
-</form>
-</body>
+  </body>
 </html>
