--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{fragments/layout :: layout(~{::title}, ~{::body})}">
-<head>
-    <title>ログアウトページ | 課題管理アプリケーション</title>
-</head>
-<body>
-<h1 class="mt-3">課題管理アプリケーション</h1>
-
-<form action="#" th:action="@{/logout}" method="post">
-    <div class="mt-3">
-        <button type="submit" class="btn btn-primary">ログアウト</button>
+<html
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
+  th:fragment="layout(title, content)"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      th:href="@{/css/style.css}"
+      href="../static/css/style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script th:src="@{/js/logout.js}" src="../static/js/logout.js"></script>
+    <title>ログアウト画面</title>
+  </head>
+  <body>
+    <div class="logout-container">
+      <h1>Spring学習プロジェクト</h1>
+      <button id="logoutBtn" class="logout-button">ログアウト</button>
     </div>
-</form>
-</body>
+  </body>
 </html>
