【フロント】修正
修正内容
・スタイルの変更
・list.htmlを大幅に修正
・その他のファイルは微修正

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,5 @@
 /* 共通設定*/
-body {
+.common-body {
   background-color: #f1f1f1;
   font-family: Arial, sans-serif;
   margin: 0;
@@ -8,6 +8,17 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
+}
+
+.list-body {
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  min-height: 100vh;
 }
 
 /* ボタンの設定（submit）*/
@@ -28,6 +39,7 @@ button[type='submit']:hover {
 
 /* h1タグのスタイル設定*/
 h1 {
+  margin-bottom: 20px;
   text-align: center;
   color: #333333;
   font-size: 24px; /* メニュータイトルのフォントサイズを調整 */
@@ -55,21 +67,35 @@ li {
   margin-bottom: 20px;
 }
 
-/* リンクのスタイル設定*/
-a {
-  display: block;
-  padding: 20px; /* メニュー項目のパディングを調整 */
-  background-color: #4caf50;
-  color: #ffffff;
+.menu-link {
+  color: #333333;
   text-decoration: none;
-  border-radius: 3px;
-  transition: background-color 0.3s;
-  font-size: 18px; /* メニューテキストのフォントサイズを調整 */
+  position: relative;
+  display: inline-block;
+  transition: color 0.3s;
+  margin: 10px;
 }
 
-a:hover {
-  background-color: #45a049;
+.menu-link::after {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #3498db;
+  transform: scaleX(0);
+  transition: transform 0.3s;
 }
+
+.menu-link:hover {
+  color: #3498db;
+}
+
+.menu-link:hover::after {
+  transform: scaleX(1);
+}
+
 @keyframes scale-in {
   0% {
     transform: scale(0);
@@ -123,4 +149,59 @@ a:hover {
 
 .logout-button:hover {
   background-color: #45a049;
+}
+
+/* ユーザ一覧画面*/
+.table-container {
+  width: 100%;
+  max-width: 800px;
+  background-color: #ffffff;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.table-title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.link-container {
+  margin: 10px;
+}
+
+.styled-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+.styled-table thead th {
+  background-color: #f9f9f9;
+  font-weight: bold;
+  padding: 10px;
+  text-align: left;
+}
+
+.styled-table tbody td {
+  background-color: #ffffff;
+  padding: 10px;
+  text-align: left;
+}
+
+.styled-table tbody tr:nth-child(even) {
+  background-color: #f5f5f5;
+}
+
+.styled-table tbody tr:nth-child(odd) {
+  background-color: #ffffff;
+}
+
+.styled-table tbody td:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.styled-table tbody td:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
