--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
 
     <title>ログイン画面</title>
   </head>
-  <body>
+  <body class="common-body">
     <div class="login-container">
       <h1>Spring学習プロジェクト</h1>
       <div th:if="${param.error}">
