--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -16,7 +16,7 @@
     <script th:src="@{/js/logout.js}" src="../static/js/logout.js"></script>
     <title>ログアウト画面</title>
   </head>
-  <body>
+  <body class="common-body">
     <div class="logout-container">
       <h1>Spring学習プロジェクト</h1>
       <button id="logoutBtn" class="logout-button">ログアウト</button>
