--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,18 +16,24 @@
 
     <title>メニュー画面</title>
   </head>
-  <body>
+  <body class="common-body">
     <div class="menu-container">
       <h1>Spring学習プロジェクト</h1>
       <ul>
         <li>
-          <a href="./issues/list.html" th:href="@{/issues}">課題一覧</a>
+          <a href="./issues/list.html" th:href="@{/issues}" class="menu-link"
+            >課題一覧</a
+          >
         </li>
         <li sec:authorize="hasAuthority('ADMIN')">
-          <a href="./users/list.html" th:href="@{/users}">ユーザ一覧</a>
+          <a href="./users/list.html" th:href="@{/users}" class="menu-link"
+            >ユーザ一覧</a
+          >
         </li>
         <li>
-          <a href="./logout.html" th:href="@{/logout}">ログアウト</a>
+          <a href="./logout.html" th:href="@{/logout}" class="menu-link"
+            >ログアウト</a
+          >
         </li>
       </ul>
     </div>
