--- a/src/main/resources/templates/users/creationForm.html
+++ b/src/main/resources/templates/users/creationForm.html
@@ -1,47 +1,107 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{fragments/layout :: layout(~{::title}, ~{::body})}">
-<head>
-    <title>ユーザ作成 | 課題管理アプリケーション</title>
-</head>
-<body>
-<h1 class="mt-3">ユーザ作成</h1>
-<a href="../index.html" th:href="@{/}">トップページ</a>
-<form action="#" th:action="@{/users}" method="post" th:object="${userForm}">
-    <!-- ユーザ名-->
-    <div class="mt-3">
-        <label for="usernameInput" class="form-label">ユーザ名</label>
-        <input type="text" id="usernameInput" class="form-control" th:field="*{username}" th:classappend="${#fields.hasErrors('username')} ? is-invalid">
-        <p class="invalid-feedback" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">(errors)</p>
-    </div>
-    <!--　パスワード-->
-    <div class="mt-3">
-        <label for="passwordInput" class="form-label">パスワード</label>
-        <input type="password" id="passwordInput" class="form-control" th:field="*{password}" th:classappend="${#fields.hasErrors('password')} ? is-invalid">
-        <p class="invalid-feedback" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">(errors)</p>
-    </div>
-    <div class="mt-3">
-        <label class="form-label" for="authorityRadio">権限</label>
+<html
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
+  th:fragment="layout(title, content)"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      th:href="@{/css/style.css}"
+      href="../../static/css/style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <title>ユーザ作成</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1>ユーザ作成</h1>
+      <div class="link-container">
+        <a href="../index.html" th:href="@{/}" class="menu-link"
+          >トップページ</a
+        >
+      </div>
+      <form
+        action="#"
+        th:action="@{/users}"
+        method="post"
+        th:object="${userForm}"
+      >
+        <!-- ユーザ名-->
+        <label for="usernameInput" class="label-form">ユーザ名</label>
+        <input
+          type="text"
+          id="usernameInput"
+          class="form-control"
+          th:field="*{username}"
+          th:classappend="${#fields.hasErrors('username')} ? is-invalid"
+        />
+        <p
+          class="invalid-feedback"
+          th:if="${#fields.hasErrors('username')}"
+          th:errors="*{username}"
+        >
+          (errors)
+        </p>
+        <!--　パスワード-->
+
+        <label for="passwordInput" class="label-form">パスワード</label>
+        <input
+          type="password"
+          id="passwordInput"
+          class="form-control"
+          th:field="*{password}"
+          th:classappend="${#fields.hasErrors('password')} ? is-invalid"
+        />
+        <p
+          class="invalid-feedback"
+          th:if="${#fields.hasErrors('password')}"
+          th:errors="*{password}"
+        >
+          (errors)
+        </p>
+        <label class="label-form" for="authorityRadio">権限</label>
         <div id="authorityRadio">
-            <div class="form-check" th:classappend="${#fields.hasErrors('authority')} ? is-invalid">
-                <input class="form-check-input" type="radio" id="authorityAdminRadio" th:field="*{authority}" value="ADMIN"
-                th:classappend="${#fields.hasErrors('authority')} ? is-invalid">
-                <label class="form-check-label" for="authorityAdminRadio">ADMIN</label>
+          <div
+            class="form-check"
+            th:classappend="${#fields.hasErrors('authority')} ? is-invalid"
+          >
+            <input
+              type="radio"
+              id="authorityAdminRadio"
+              th:field="*{authority}"
+              value="ADMIN"
+              th:classappend="${#fields.hasErrors('authority')} ? is-invalid"
+            />
+            <label for="authorityAdminRadio">ADMIN</label>
+            <div
+              th:classappend="${#fields.hasErrors('authority')} ? is-invalid"
+            >
+              <input
+                type="radio"
+                id="authorityUserRadio"
+                th:field="*{authority}"
+                value="USER"
+                th:classappend="${#fields.hasErrors('authority')} ? is-invalid"
+              />
+              <label for="authorityUserRadio">USER</label>
             </div>
-            <div class="form-check" th:classappend="${#fields.hasErrors('authority')} ? is-invalid">
-                <input class="form-check-input" type="radio" id="authorityUserRadio" th:field="*{authority}" value="USER"
-                       th:classappend="${#fields.hasErrors('authority')} ? is-invalid">
-                <label class="form-check-label" for="authorityUserRadio">USER</label>
-            </div>
-            <p class="invalid-feedback" th:if="${#fields.hasErrors('authority')}"
-            th:errors="*{authority}">(error)</p>
+            <p
+              th:if="${#fields.hasErrors('authority')}"
+              th:errors="*{authority}"
+            >
+              (error)
+            </p>
+          </div>
         </div>
+        <!-- ボタン-->
+        <button type="submit">作成</button>
+        <a href="./list.html" th:href="@{/users}" class="menu-link"
+          >キャンセル</a
+        >
+      </form>
     </div>
-    <!-- ボタン-->
-    <div class="mt-3">
-        <button type="submit" class="btn btn-primary">作成</button>
-        <a href="./list.html" th:href="@{/users}" class="btn btn-secondary">キャンセル</a>
-    </div>
-</form>
-</body>
+  </body>
 </html>
