--- a/src/main/resources/templates/issues/detail.html
+++ b/src/main/resources/templates/issues/detail.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{fragments/layout :: layout(~{::title}, ~{::body})}">
-<head>
-    <title>課題詳細 | 課題管理アプリケーション</title>
-</head>
-<body>
-<h1 class="mt-3">課題詳細</h1>
-<a href="./list.html" th:href="@{/issues}">一覧に戻る</a>
-<div>
-  <h2 th:text="${issue.summary}">(summary)</h2>
-  <p th:text="${issue.description}">(description)</p>
-</div>
-</body>
+<html
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
+  th:fragment="layout(title, content)"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      th:href="@{/css/style.css}"
+      href="../../static/css/style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <title>課題詳細</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1>課題詳細</h1>
+      <a href="./list.html" th:href="@{/issues}">一覧に戻る</a>
+      <div>
+        <h2 th:text="${issue.summary}">(summary)</h2>
+        <p th:text="${issue.description}" class="issues-detail-p">
+          (description)
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
