--- a/src/main/resources/templates/issues/list.html
+++ b/src/main/resources/templates/issues/list.html
@@ -1,30 +1,53 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{fragments/layout :: layout(~{::title}, ~{::body})}">
-<head>
-    <title>課題一覧 | 課題管理アプリケーション</title>
-</head>
-<body>
-<h1 class="mt-3">課題一覧</h1>
-<a href="../index.html" th:href="@{/}">トップページ</a>
-<a href="./creationForm.html" th:href="@{/issues/creationForm}">作成</a>
-<table class="table">
-  <thead>
-  <tr>
-    <th>#</th>
-    <th>概要</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="issue : ${issueList}">
-    <th th:text="${issue.id}">(id)</th>
-    <td>
-      <a href="./detail.html" th:href="@{/issues/{issueId}(issueId=${issue.id})}" th:text="${issue.summary}">
-        (summary)
-      </a>
-    </td>
-  </tr>
-  </tbody>
-</table>
-</body>
+<html
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
+  th:fragment="layout(title, content)"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      th:href="@{/css/style.css}"
+      href="../../static/css/style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <title>課題一覧</title>
+  </head>
+  <body class="list-body">
+    <div class="table-container">
+      <h1>課題一覧</h1>
+      <a href="../index.html" th:href="@{/}" class="menu-link">トップページ</a>
+      <a
+        href="./creationForm.html"
+        th:href="@{/issues/creationForm}"
+        class="menu-link"
+        >作成</a
+      >
+      <table class="styled-table">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>概要</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr th:each="issue : ${issueList}">
+            <th th:text="${issue.id}">(id)</th>
+            <th>
+              <a
+                href="./detail.html"
+                th:href="@{/issues/{issueId}(issueId=${issue.id})}"
+                th:text="${issue.summary}"
+                class="menu-link"
+              >
+                (summary)
+              </a>
+            </th>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </body>
 </html>
